# CoreScript

./: CMakeLists.txt  README.md
